# python-ssc

./: MANIFEST.in  README.md  pyproject.toml
python_ssc/: SSCAccelSensor.py  SSCClient.py  SSCCompassSensor.py  SSCFossilSleepSensor.py  SSCFossilTrackerSensor.py  SSCHeartRateSensor.py  SSCLifeqSPo2Sensor.py  SSCLightSensor.py  SSCPedoSensor.py  SSCPressureSensor.py  SSCSensor.py  SSCTestSensor.py  __init__.py  const.py
python_ssc/protobufs/: ssc_common_pb2.py  ssc_sensor_accelerometer_pb2.py  ssc_sensor_calories_pb2.py  ssc_sensor_heart_rate_pb2.py  ssc_sensor_lifeq_spo2_pb2.py  ssc_sensor_light_pb2.py  ssc_sensor_pedo_pb2.py  ssc_sensor_pressure_pb2.py  ssc_sensor_rotationvector_pb2.py  ssc_sensor_suid_pb2.py
python_ssc/protobufs/src/: ssc-common.proto  ssc-sensor-calories.proto  ssc-sensor-heart-rate.proto  ssc-sensor-lifeq-spo2.proto  ssc-sensor-pedo.proto  ssc-sensor-pressure.proto  ssc-sensor-suid.proto
python_ssc/protobufs/src/libsensoraccess/: README.md  fsl_lifeq_lel_config.proto  sns_device_mode_wear.proto  sns_ext_svc.proto  sns_fsl_actrec.proto  sns_fsl_calo.proto  sns_fsl_chrm.proto  sns_fsl_device_mode_tracker.proto  sns_fsl_formatter.proto  sns_fsl_hb_det.proto  sns_fsl_hwf.proto  sns_fsl_min.proto  sns_fsl_msl.proto  sns_fsl_rhr.proto  sns_fsl_sleep.proto  sns_fsl_tracker.proto  sns_fsl_usr.proto  sns_fsl_wk.proto  sns_lifeq_spo2_config.proto  sns_offcharge_detect.proto  sns_std_sensor.proto  wellness.proto
python_ssc/scripts/: python_ssc.py
